# devtodo

./: .cirrus.yml  Cargo.toml  README.md  rustfmt.toml
src/: account.rs  config.rs  main.rs  todo.rs
src/account/: github.rs  gitlab.rs  prelude.rs
src/account/github/: README.md  client.rs  queries.rs
src/account/github/graphql/: query.graphql  schema.graphql
