[package]
name = "devtodo"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.0"
derive_builder = "0.9"
env_logger = "0.7"
human-panic = "1.0"
itertools = "0.9"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.vobject]
#vobject = "0.8"
git = "https://github.com/untitaker/rust-vobject.git"
