[package]
name = "devtodo"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
edition = "2018"

[features]
default = ["github"]
github = ["graphql_client", "lazy-init", "once_cell", "reqwest", "serde_json", "url"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.0"
derive_builder = "0.12"
directories = "1.0"
env_logger = "0.10"
human-panic = "1.0"
itertools = "0.11"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
yaml-merge-keys = { version = "0.4", features = ["serde_yaml"] }

# github feature
graphql_client = { version = "0.9", optional = true }
lazy-init = { version = "0.5", optional = true }
once_cell = { version = "1.3", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0", optional = true }
url = { version = "2.0", optional = true }

[dependencies.vobject]
#vobject = "0.8"
git = "https://github.com/untitaker/rust-vobject.git"
