[package]
name = "devtodo"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
edition = "2018"

[features]
default = ["github"]
github = ["graphql_client", "lazy-init", "once_cell", "reqwest", "serde_json", "url"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.0", default-features = false, features = ["cargo", "std"] }
derive_builder = "0.20"
directories = "6.0"
env_logger = "0.11"
human-panic = "2.0"
itertools = "0.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0"
uuid = { version = "1.4", features = ["v4"] }
yaml-merge-keys = { version = "0.8", features = ["serde_yml"] }

# github feature
graphql_client = { version = "0.14", optional = true }
lazy-init = { version = "0.5", optional = true }
once_cell = { version = "1.3", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0", optional = true }
url = { version = "2.5.4", optional = true }

[dependencies.vobject]
#vobject = "0.8"
git = "https://github.com/untitaker/rust-vobject.git"
